# aws-echo-sample

./: .gitignore  .terraformignore  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum  task-def.json
terraform/: main.tf  terraform.tfvars.sample  variables.tf
terraform/modules/: alb.tf  gateway.tf  iam_role.tf  iam_user.tf  routes.tf  security_group.tf  subnet.tf  variables.tf  vpc.tf
