load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/andoshin11/echo-sample
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/andoshin11/echo-sample",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_labstack_echo_v4//:go_default_library",
        "@com_github_labstack_echo_v4//middleware:go_default_library",
    ],
)

go_binary(
    name = "echo-sample",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
